# Project

./: .env  main.py  pyproject.toml  requirements.txt  test.db
src/: app.py  auth.py  database.py  model.py  schemas.py
static/css/: chat.css  database-connection.css  login.css  pricing.css  signup.css  style.css
static/js/: chat.js  database-connection.js  login.js  pricing.js  script.js  signup.js
templates/: chat.html  database-connection.html  index.html  login.html  pricing.html  signup.html
